Fix Mobile bugs (#99)
* fix: revert sanitize input search appearance
* fix: remove top spacing for previous sticky header
* fix: fix icon and button wrap on small screen
* fix: prevent word-break on logo
* feat: use aspect-ratio when available
* fix: search filters with horizontal scroll

--- a/theme/less/components/search-input.less
+++ b/theme/less/components/search-input.less
@@ -21,13 +21,9 @@
     }
 
     input[type="text"] {
-        margin-left: @spacing-md;
         padding: @spacing-xxs @spacing-xs;
-
         font-size: inherit;
-
         border: none;
         appearance: none;
-        flex-grow: 1;
     }
 }
