--- a/theme/less/specific/search.less
+++ b/theme/less/specific/search.less
@@ -7,21 +7,11 @@
     .search-bar {
         @media @query-md {
             position: sticky;
-            top: 72px; // header height
+            top: 0;
             z-index: 1;
             background: white;
-
-            padding: 0 @spacing-md;
-
-            margin-left: -@spacing-md;
-            margin-right: -@spacing-md;
-
             border-bottom: 1px solid @grey-200;
         }
-    }
-
-    .search-input {
-        flex-grow: 1;
     }
 
     // Nice filter icons gets filled blue when active
